[gd_scene load_steps=32 format=3 uid="uid://daiw08gs6iupx"]

[ext_resource type="Script" path="res://Assets/Scripts/warriors.gd" id="1_6ts4e"]
[ext_resource type="Texture2D" uid="uid://cqmo36q4qdrlj" path="res://Assets/Tiles/Players/Export/Others-Warrior.png" id="1_he6og"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vvajf"]
atlas = ExtResource("1_he6og")
region = Rect2(2208, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7swl"]
atlas = ExtResource("1_he6og")
region = Rect2(2256, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4ncp"]
atlas = ExtResource("1_he6og")
region = Rect2(2304, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qexqq"]
atlas = ExtResource("1_he6og")
region = Rect2(2400, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_43c8l"]
atlas = ExtResource("1_he6og")
region = Rect2(2304, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x287i"]
atlas = ExtResource("1_he6og")
region = Rect2(2256, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcmop"]
atlas = ExtResource("1_he6og")
region = Rect2(960, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xi6k"]
atlas = ExtResource("1_he6og")
region = Rect2(1008, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlpn1"]
atlas = ExtResource("1_he6og")
region = Rect2(1056, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3kr3"]
atlas = ExtResource("1_he6og")
region = Rect2(1104, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uejph"]
atlas = ExtResource("1_he6og")
region = Rect2(1152, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn1dd"]
atlas = ExtResource("1_he6og")
region = Rect2(1200, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bacjl"]
atlas = ExtResource("1_he6og")
region = Rect2(1248, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1b7p"]
atlas = ExtResource("1_he6og")
region = Rect2(1296, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p3c2"]
atlas = ExtResource("1_he6og")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdfyn"]
atlas = ExtResource("1_he6og")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o2eh"]
atlas = ExtResource("1_he6og")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn8il"]
atlas = ExtResource("1_he6og")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d425"]
atlas = ExtResource("1_he6og")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk601"]
atlas = ExtResource("1_he6og")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m853"]
atlas = ExtResource("1_he6og")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4emq"]
atlas = ExtResource("1_he6og")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji6xb"]
atlas = ExtResource("1_he6og")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o52e4"]
atlas = ExtResource("1_he6og")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuhjv"]
atlas = ExtResource("1_he6og")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyhex"]
atlas = ExtResource("1_he6og")
region = Rect2(720, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_iu8r6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvajf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7swl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4ncp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qexqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43c8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x287i")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_vcmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xi6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlpn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3kr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uejph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bacjl")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f1b7p")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p3c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdfyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o2eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn8il")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d425")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk601")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m853")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4emq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji6xb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o52e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuhjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyhex")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8qod8"]
size = Vector2(17, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fk0s"]
size = Vector2(10, 21)

[node name="Warriors" type="Node2D"]
script = ExtResource("1_6ts4e")

[node name="PhysicsWarrior" type="CharacterBody2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="PhysicsWarrior"]
z_index = 3
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_iu8r6")
animation = &"die"
autoplay = "run"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="PhysicsWarrior"]
path_desired_distance = 4.0
target_desired_distance = 4.0
path_max_distance = 10.0
max_speed = 8.0

[node name="attack" type="Area2D" parent="PhysicsWarrior"]

[node name="attack" type="CollisionShape2D" parent="PhysicsWarrior/attack"]
z_index = 5
position = Vector2(4.5, 0.5)
shape = SubResource("RectangleShape2D_8qod8")
disabled = true

[node name="life" type="Area2D" parent="PhysicsWarrior"]

[node name="colBody" type="CollisionShape2D" parent="PhysicsWarrior/life"]
z_index = 5
position = Vector2(0, -3.5)
shape = SubResource("RectangleShape2D_1fk0s")

[connection signal="animation_finished" from="PhysicsWarrior/Sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="area_entered" from="PhysicsWarrior/life" to="." method="_on_life_area_entered"]
